--- a/Spokeduino Mothership/ui/spokeduino_mothership.ui
+++ b/Spokeduino Mothership/ui/spokeduino_mothership.ui
@@ -135,7 +135,7 @@
                  <item>
                   <layout class="QVBoxLayout" name="verticalLayout_6">
                    <item>
-                    <layout class="QHBoxLayout" name="horizontalLayoutSpokeDefinitionsDatabase_6" stretch="0,0,0,0,0">
+                    <layout class="QHBoxLayout" name="horizontalLayoutSpokeDefinitionsDatabase_6" stretch="0,0,0,0,0,0">
                      <item>
                       <widget class="QPushButton" name="pushButtonUseLeft">
                        <property name="sizePolicy">
@@ -194,6 +194,22 @@
                        </property>
                        <property name="icon">
                         <iconset theme="QIcon::ThemeIcon::ListAdd"/>
+                       </property>
+                      </widget>
+                     </item>
+                     <item>
+                      <widget class="QPushButton" name="pushButtonEditMeasurement">
+                       <property name="sizePolicy">
+                        <sizepolicy hsizetype="Maximum" vsizetype="Maximum">
+                         <horstretch>0</horstretch>
+                         <verstretch>0</verstretch>
+                        </sizepolicy>
+                       </property>
+                       <property name="text">
+                        <string>Edit</string>
+                       </property>
+                       <property name="icon">
+                        <iconset theme="QIcon::ThemeIcon::DocumentProperties"/>
                        </property>
                       </widget>
                      </item>
