--- a/Spokeduino Mothership/ui/spokeduino_mothership.ui
+++ b/Spokeduino Mothership/ui/spokeduino_mothership.ui
@@ -600,11 +600,11 @@
        </attribute>
        <layout class="QHBoxLayout" name="horizontalLayoutMeasurementTop">
         <item>
-         <layout class="QHBoxLayout" name="horizontalLayoutMeasurement" stretch="3,0,2">
+         <layout class="QHBoxLayout" name="horizontalLayoutMeasurement" stretch="3,2">
           <item>
            <layout class="QHBoxLayout" name="horizontalLayoutMeasurementsLeft" stretch="0">
             <item>
-             <widget class="QGroupBox" name="groupBoxMeasurement">
+             <widget class="QGroupBox" name="groupBoxMeasurementLeft">
               <property name="title">
                <string>Measurement</string>
               </property>
@@ -681,59 +681,30 @@
            </layout>
           </item>
           <item>
-           <spacer name="horizontalSpacerMeasurementCenter">
-            <property name="orientation">
-             <enum>Qt::Orientation::Horizontal</enum>
-            </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>40</width>
-              <height>20</height>
-             </size>
-            </property>
-           </spacer>
-          </item>
-          <item>
-           <widget class="QGroupBox" name="groupBoxSpokeMeasurement">
-            <property name="title">
-             <string>Selected spoke</string>
-            </property>
-            <layout class="QVBoxLayout" name="verticalLayoutSpokeMeasurement">
-             <item>
-              <widget class="QPlainTextEdit" name="plainTextEdit"/>
-             </item>
-             <item>
-              <spacer name="verticalSpacerMeasurementBottom">
-               <property name="orientation">
-                <enum>Qt::Orientation::Vertical</enum>
-               </property>
-               <property name="sizeHint" stdset="0">
-                <size>
-                 <width>20</width>
-                 <height>28</height>
-                </size>
-               </property>
-              </spacer>
-             </item>
-             <item>
-              <layout class="QHBoxLayout" name="horizontalLayoutSpokeButtonsMeasurement">
+           <layout class="QHBoxLayout" name="horizontalLayoutMeasurementRight" stretch="0">
+            <item>
+             <widget class="QGroupBox" name="groupBoxMeasurementRight">
+              <property name="title">
+               <string/>
+              </property>
+              <layout class="QVBoxLayout" name="verticalLayoutMeasurementRight" stretch="0">
                <item>
-                <spacer name="horizontalSpacerMeasurementRight">
+                <spacer name="verticalSpacer_3">
                  <property name="orientation">
-                  <enum>Qt::Orientation::Horizontal</enum>
+                  <enum>Qt::Orientation::Vertical</enum>
                  </property>
                  <property name="sizeHint" stdset="0">
                   <size>
-                   <width>40</width>
-                   <height>20</height>
+                   <width>20</width>
+                   <height>40</height>
                   </size>
                  </property>
                 </spacer>
                </item>
               </layout>
-             </item>
-            </layout>
-           </widget>
+             </widget>
+            </item>
+           </layout>
           </item>
          </layout>
         </item>
